finished off large message example