@@ -41,26 +41,34 @@ import javax.naming.InitialContext;
 import org.jboss.messaging.jms.client.JBossMessage;
 
 /**
- * A simple JMS Queue example that creates a producer and consumer on a queue and sends then receives a message.
- *
- * @author <a href="ataylor@redhat.com">Andy Taylor</a>
+ * This example demonstrates the ability of JBoss Messaging to send and consume a very large message, much
+ * bigger than can fit in RAM.
+ * 
+ * @author <a href="tim.fox@jboss.com">Tim Fox</a>
  */
 public class LargeMessageExample extends JMSExample
 {
    public static void main(String[] args)
    {
-      new LargeMessageExample().run(args);
+      // We limit the server to running in only 50MB of RAM
+      String[] serverJMXArgs = new String[] {"-Xms50M",
+                                             "-Xmx50M",
+                                             "-XX:+UseParallelGC",
+                                             "-XX:+AggressiveOpts",
+                                             "-XX:+UseFastAccessorMethods"};
+
+      new LargeMessageExample().run(serverJMXArgs, args);
    }
 
-   private final long FILE_SIZE = 4l * 1024l * 1024l * 1024l; // 4G (if you want to change this size, make it a multiple
-                                                              // of 1024 * 1024)
+   //The message we will send is size 256MB, even though we are only running in 50MB of RAM on both client and server.
+   //JBoss Messaging will support much larger message sizes, but we use 512MB so the example runs in reasonable time.
+   private final long FILE_SIZE = 256 * 1024 * 1024;
 
    public boolean runExample() throws Exception
    {
       Connection connection = null;
       InitialContext initialContext = null;
-      File fileInput = File.createTempFile("example", ".jbm");
-      File fileOutput = File.createTempFile("example", ".jbm");
+
       try
       {
          // Step 1. Create an initial context to perform the JNDI lookup.
@@ -69,87 +77,126 @@ public class LargeMessageExample extends JMSExample
          // Step 2. Perfom a lookup on the queue
          Queue queue = (Queue)initialContext.lookup("/queue/exampleQueue");
 
-         // Step 3. Perform a lookup on the Connection Factory. This ConnectionFactory has a special set on this
-         // example. Messages with more than 10K are considered large
+         // Step 3. Perform a lookup on the Connection Factory. This ConnectionFactory has a special attribute set on
+         // it.
+         // Messages with more than 10K are considered large
          ConnectionFactory cf = (ConnectionFactory)initialContext.lookup("/ConnectionFactory");
 
-         // Step 4.Create a JMS Connection
+         // Step 4. Create the JMS objects
          connection = cf.createConnection();
 
-         // Step 5. Create a JMS Session
          Session session = connection.createSession(false, Session.AUTO_ACKNOWLEDGE);
 
-         // Step 6. Create a JMS Message Producer
          MessageProducer producer = session.createProducer(queue);
 
-         // creating an arbitray file
+         // Step 5. Create a huge file - this will form the body of the message we will send.
+
+         System.out.println("Creating a file to send of size " + FILE_SIZE +
+                            " bytes. This may take a little while... " +
+                            "If this is too big for your disk you can easily change the FILE_SIZE in the example.");
+
+         File fileInput = new File("huge_message_to_send.dat");
+
+         fileInput.createNewFile();
+
          createFile(fileInput, FILE_SIZE);
 
-         // Step 7. Create a BytesMessage
+         System.out.println("File created.");
+
+         // Step 6. Create a BytesMessage - does it have to be a bytesmessage??
          BytesMessage message = session.createBytesMessage();
 
-
-         // Step 8. Set the InputStream
+         // Step 7. We set the InputStream on the message. When sending the message will read the InputStream
+         // until it gets EOF. In this case we point the InputStream at a file on disk, and it will suck up the entire
+         // file, however we could use any InputStream not just a FileInputStream.
          FileInputStream fileInputStream = new FileInputStream(fileInput);
          BufferedInputStream bufferedInput = new BufferedInputStream(fileInputStream);
          ((JBossMessage)message).setInputStream(bufferedInput);
+
+         System.out.println("Sending the huge message.");
 
          // Step 9. Send the Message
          producer.send(message);
 
          System.out.println("Large Message sent");
 
-         // if you sleep the example and look at ./build/data/largeMessages you will see the largeMessage stored on disk
+         System.out.println("Stopping server.");
 
-         // Step 10. Create a JMS Message Consumer
-         MessageConsumer messageConsumer = session.createConsumer(queue);
+         // Step 10. To demonstrate that that we're not simply streaming the message from sending to consumer, we stop
+         // the server and restart it before consuming the message. This demonstrates that the large message gets
+         // persisted, like a
+         // normal persistent message, on the server. If you look at ./build/data/largeMessages you will see the
+         // largeMessage stored on disk the server
 
-         // Step 11. Start the Connection
-         connection.start();
-
-         // Step 12. Receive the message
-         BytesMessage messageReceived = (BytesMessage)messageConsumer.receive(120000);
-
-         System.out.println("Received message with: " + messageReceived.getBodyLength() + " bytes");
-
-         FileOutputStream fileOutputStream = new FileOutputStream(fileOutput);
-         BufferedOutputStream bufferedOutput = new BufferedOutputStream(fileOutputStream);
-
-         // Step 13. Setting a stream to receive the message. You may choose to use the regular BytesMessage or STreamMessage interface but this method is much faster for large messages.
-         ((JBossMessage)messageReceived).setOutputStream(bufferedOutput);
-         
-         // Step 14. We don' t want to close the connection while the message is being processed. 
-         ((JBossMessage)messageReceived).waitCompletionOnStream(300000);
-
+         connection.close();
 
          initialContext.close();
+
+         stopServer(0);
+
+         // Give the server a little time to shutdown properly
+         Thread.sleep(5000);
+
+         startServer(0);
+
+         System.out.println("Server restarted.");
+
+         // Step 11. Now the server is restarted we can recreate the JMS Objects, and start the new connection
+
+         initialContext = getContext(0);
+
+         queue = (Queue)initialContext.lookup("/queue/exampleQueue");
+
+         cf = (ConnectionFactory)initialContext.lookup("/ConnectionFactory");
+
+         connection = cf.createConnection();
+
+         session = connection.createSession(false, Session.AUTO_ACKNOWLEDGE);
+
+         MessageConsumer messageConsumer = session.createConsumer(queue);
+
+         connection.start();
+
+         System.out.println("Receiving message.");
+
+         // Step 12. Receive the message. When we receive the large message we initially just receive the message with
+         // an empty body.
+         BytesMessage messageReceived = (BytesMessage)messageConsumer.receive(120000);
+
+         System.out.println("Received message with: " + messageReceived.getBodyLength() +
+                            " bytes. Now streaming to file on disk.");
+
+         // Step 13. We set an OutputStream on the message. This causes the message body to be written to the
+         // OutputStream until there are no more bytes to be written.
+         // You don't have to use a FileOutputStream, you can use any OutputStream.
+         // You may choose to use the regular BytesMessage or
+         // StreamMessage interface but this method is much faster for large messages.
+
+         File outputFile = new File("huge_message_received.dat");
+
+         FileOutputStream fileOutputStream = new FileOutputStream(outputFile);
+
+         BufferedOutputStream bufferedOutput = new BufferedOutputStream(fileOutputStream);
+
+         ((JBossMessage)messageReceived).setOutputStream(bufferedOutput);
+
+         // Step 14. We wait until the entire message is written before continuing.
+         ((JBossMessage)messageReceived).waitCompletionOnStream(300000);
+
+         fileOutputStream.close();
+
+         System.out.println("File streamed to disk. Size of received file on disk is " + outputFile.length());
 
          return true;
       }
       finally
       {
-         // Deleting the tmporary files created
-         try
-         {
-            fileInput.delete();
-         }
-         catch (Throwable ignored)
-         {
-         }
-
-         try
-         {
-            fileOutput.delete();
-         }
-         catch (Throwable ignored)
-         {
-         }
-
-         // Step 12. Be sure to close our JMS resources!
+         // Step 12. Be sure to close our resources!
          if (initialContext != null)
          {
             initialContext.close();
          }
+
          if (connection != null)
          {
             connection.close();
@@ -158,17 +205,17 @@ public class LargeMessageExample extends JMSExample
    }
 
    /**
-    * @param tmpFile
+    * @param file
     * @param fileSize
     * @throws FileNotFoundException
     * @throws IOException
     */
-   private void createFile(File tmpFile, long fileSize) throws FileNotFoundException, IOException
+   private void createFile(File file, long fileSize) throws FileNotFoundException, IOException
    {
-      FileOutputStream fileOut = new FileOutputStream(tmpFile);
+      FileOutputStream fileOut = new FileOutputStream(file);
       BufferedOutputStream buffOut = new BufferedOutputStream(fileOut);
       byte[] outBuffer = new byte[1024 * 1024];
-      for (long i = 0; i < fileSize; i += outBuffer.length) // 4G message
+      for (long i = 0; i < fileSize; i += outBuffer.length)
       {
          buffOut.write(outBuffer);
       }
